--- a/src/components/Upload&ConvertImage/style.css
+++ b/src/components/Upload&ConvertImage/style.css
@@ -1,7 +1,3 @@
-.background-img{
-    width: 300px;
-    height: 300px;
-}
 .img-container{
     height: 300px;
     margin-left: 10px;
@@ -35,5 +31,11 @@ input{
 @media (max-width:768px){
     input{
         width: 320px;
+    }
+    .image{
+        width: 340px;
+        height: 250px;
+        margin-right: 10px;
+        margin-left: -20px;
     }
 }
